# tenbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/commands/: dog.rs  f1.rs  mod.rs  openai.rs  riot.rs  util.rs
