[package]
name = "tenbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde_json = "1.0.81"
reqwest = "0.11.11"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
git = "https://github.com/serenity-rs/serenity.git"