[package]
name = "tenbot"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde_json = "1.0.91"
reqwest = "0.11.14"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
git = "https://github.com/serenity-rs/serenity.git"